# minecraft-backup

./: .gitignore  Taskfile.yml  docker-compose.yaml  dockerfile  pyproject.toml
.github/workflows/: lint.yaml
mc_backup/: __main__.py  _backup.py  _rcon.py  settings.py
